--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-    <html lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>PHP7</title>
+        <title>Document</title>
     </head>
     <body>
 
